@@ -1,5 +1,10 @@
 2016-09-22 Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Fix corner case
+	where signed/unsigned ints are compared.
+
+2016-09-22 Albert Chu <chu11@llnl.gov>
+
 	* libipmiconsole/: Do not close user fd if use has retrieved it
 	from ipmiconsole_ctx_fd.  Double close can lead to race
 	conditions.
